@@ -1,0 +1,40 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<chummer>
+  <weaponmounts>
+    <weaponmount>
+      <id>4fdb0fb3-c987-41a0-b11e-d82fe6ac85b1</id>
+      <name>Micro (Drone)</name>
+      <cost>500</cost>
+    </weaponmount>
+    <weaponmount>
+      <id>94d06312-0487-4f3c-a8e9-e02ac2d04a2e</id>
+      <name>Mini (Drone)</name>
+      <cost>600</cost>
+    </weaponmount>
+    <weaponmount>
+      <id>9ee5e112-8ced-4266-9141-02ef18e33f43</id>
+      <name>Small (Drone)</name>
+      <cost>750</cost>
+    </weaponmount>
+    <weaponmount>
+      <id>0ec991be-a888-4547-8ca2-ad43d7c7399e</id>
+      <name>Standard (Drone)</name>
+      <cost>1500</cost>
+    </weaponmount>
+    <weaponmount>
+      <id>2ab20ea4-441c-482d-977e-a5e90f37cb51</id>
+      <name>Large (Drone)</name>
+      <cost>2500</cost>
+    </weaponmount>
+    <weaponmount>
+      <id>30099989-d8ca-4f9c-adf0-1de36b6f8ab6</id>
+      <name>Huge (Drone)</name>
+      <cost>3000</cost>
+    </weaponmount>
+    <weaponmount>
+      <id>52973ba7-3dbb-49fe-9a4c-8105eb6ab4bc</id>
+      <name>Heavy (Drone)</name>
+      <cost>4000</cost>
+    </weaponmount>
+  </weaponmounts>
+</chummer>
