@@ -44,7 +44,9 @@ Data Changes:
 - Personal Drone Rack is now a gear that can be added as a plugin to Micro-Hardpoints instead of being armor mods that take up capacity. Closes #3448.
 - The Hammerli Gemini now properly doubles all Barrel accessories and modifications and uses its special firing mode of effective SA with 2 bullets fired in Single Shot and 6 bullets fired in Short Burst. It also has an ammo capacity of 16(c) instead of 8(c), though this is because it is difficult to implement the 2x clip RAW says it uses. Ammo modification costs still need to be tracked manually, as do doubled costs of Spare Clips. Existing characters with a Hammerli Gemini need to re-add the firearm to their character to see its changes.
 - The Dracoform qualities can now be taken in a way that would make the character go into karma debt, and characters moving to Career mode with a Dracoform quality will have the quality's karma cost ignored for the purposes of checking whether they have enough karma left over from Create mode. Closes #3366.
-= Fixed a crash that would occur when selecting a skill as an optional power. Closes #3677.
+- Fixed a crash that would occur when selecting a skill as an optional power. Closes #3677.
+- Fixed missing Copy settings for some custom data entries that prevented them being copied into release folders. 
+- Added a customdata rule for the German variant prices for Rigger 5's drone turrets. Closes #3760
 
 New Strings:
 
